--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -713,8 +713,15 @@
    "source": [
     "y_train_pred_forest = cross_val_predict(forest_clf, X_train, y_train_5, cv=3)\n",
     "print(\"Precsion: \", precision_score(y_train_5, y_train_pred_forest))\n",
-    "print(\"Recall: \", )"
+    "print(\"Recall: \", recall_score(y_train_5, y_train_pred_forest))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
