pushing all files to git;

--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1050,9 +1050,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.976410265560605"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_train_knn_pred = cross_val_predict(knn_clf, X_train, y_multilabel, cv=3)\n",
     "f1_score(y_multilabel, y_train_knn_pred, average=\"macro\")"
@@ -1067,9 +1078,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=4, p=2,\n",
+       "                     weights='distance')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "knn_clf = KNeighborsClassifier(weights='distance', n_neighbors=4)\n",
