--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1156,6 +1156,31 @@
      "text": [
       "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed: 16.6min remaining:    0.0s\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ...... n_neighbors=3, weights=uniform, score=0.971, total=15.0min\n",
+      "[CV] n_neighbors=3, weights=uniform ..................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed: 31.6min remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ...... n_neighbors=3, weights=uniform, score=0.969, total=15.1min\n",
+      "[CV] n_neighbors=3, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=3, weights=uniform, score=0.969, total=15.1min\n",
+      "[CV] n_neighbors=3, weights=uniform ..................................\n"
+     ]
     }
    ],
    "source": [
