--- a/Linear Models/linear_regression.ipynb
+++ b/Linear Models/linear_regression.ipynb
@@ -448,6 +448,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDRegressor(alpha=0.0001, average=False, early_stopping=False, epsilon=0.1,\n",
+       "             eta0=0.1, fit_intercept=True, l1_ratio=0.15,\n",
+       "             learning_rate='invscaling', loss='squared_loss', max_iter=1000,\n",
+       "             n_iter_no_change=5, penalty=None, power_t=0.25, random_state=42,\n",
+       "             shuffle=True, tol=0.001, validation_fraction=0.1, verbose=0,\n",
+       "             warm_start=False)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import SGDRegressor\n",
+    "\n",
+    "sgd_reg = SGDRegressor(max_iter=1000, tol=1e-3, penalty=None, eta0=0.1, random_state=42)\n",
+    "sgd_reg.fit(X, y.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([4.24365286]), array([2.8250878]))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sgd_reg.intercept_, sgd_reg.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
