--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1179,7 +1179,9 @@
       "[CV] ...... n_neighbors=3, weights=uniform, score=0.969, total=15.1min\n",
       "[CV] n_neighbors=3, weights=uniform ..................................\n",
       "[CV] ...... n_neighbors=3, weights=uniform, score=0.969, total=15.1min\n",
-      "[CV] n_neighbors=3, weights=uniform ..................................\n"
+      "[CV] n_neighbors=3, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=3, weights=uniform, score=0.970, total=15.6min\n",
+      "[CV] n_neighbors=3, weights=distance .................................\n"
      ]
     }
    ],
