--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1181,6 +1181,12 @@
       "[CV] ...... n_neighbors=3, weights=uniform, score=0.969, total=15.1min\n",
       "[CV] n_neighbors=3, weights=uniform ..................................\n",
       "[CV] ...... n_neighbors=3, weights=uniform, score=0.970, total=15.6min\n",
+      "[CV] n_neighbors=3, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=3, weights=distance, score=0.972, total=15.0min\n",
+      "[CV] n_neighbors=3, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=3, weights=distance, score=0.972, total=14.8min\n",
+      "[CV] n_neighbors=3, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=3, weights=distance, score=0.970, total=14.9min\n",
       "[CV] n_neighbors=3, weights=distance .................................\n"
      ]
     }
