--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1187,7 +1187,11 @@
       "[CV] ..... n_neighbors=3, weights=distance, score=0.972, total=14.8min\n",
       "[CV] n_neighbors=3, weights=distance .................................\n",
       "[CV] ..... n_neighbors=3, weights=distance, score=0.970, total=14.9min\n",
-      "[CV] n_neighbors=3, weights=distance .................................\n"
+      "[CV] n_neighbors=3, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=3, weights=distance, score=0.970, total=15.1min\n",
+      "[CV] n_neighbors=3, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=3, weights=distance, score=0.971, total=14.9min\n",
+      "[CV] n_neighbors=4, weights=uniform ..................................\n"
      ]
     }
    ],
