--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1191,7 +1191,17 @@
       "[CV] ..... n_neighbors=3, weights=distance, score=0.970, total=15.1min\n",
       "[CV] n_neighbors=3, weights=distance .................................\n",
       "[CV] ..... n_neighbors=3, weights=distance, score=0.971, total=14.9min\n",
-      "[CV] n_neighbors=4, weights=uniform ..................................\n"
+      "[CV] n_neighbors=4, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=4, weights=uniform, score=0.969, total=15.0min\n",
+      "[CV] n_neighbors=4, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=4, weights=uniform, score=0.968, total=14.8min\n",
+      "[CV] n_neighbors=4, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=4, weights=uniform, score=0.968, total=14.8min\n",
+      "[CV] n_neighbors=4, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=4, weights=uniform, score=0.967, total=14.8min\n",
+      "[CV] n_neighbors=4, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=4, weights=uniform, score=0.970, total=15.2min\n",
+      "[CV] n_neighbors=4, weights=distance .................................\n"
      ]
     }
    ],
