--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1201,6 +1201,8 @@
       "[CV] ...... n_neighbors=4, weights=uniform, score=0.967, total=14.8min\n",
       "[CV] n_neighbors=4, weights=uniform ..................................\n",
       "[CV] ...... n_neighbors=4, weights=uniform, score=0.970, total=15.2min\n",
+      "[CV] n_neighbors=4, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=4, weights=distance, score=0.973, total=15.8min\n",
       "[CV] n_neighbors=4, weights=distance .................................\n"
      ]
     }
