--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1203,6 +1203,10 @@
       "[CV] ...... n_neighbors=4, weights=uniform, score=0.970, total=15.2min\n",
       "[CV] n_neighbors=4, weights=distance .................................\n",
       "[CV] ..... n_neighbors=4, weights=distance, score=0.973, total=15.8min\n",
+      "[CV] n_neighbors=4, weights=distance .................................\n",
+      "[CV] .... n_neighbors=4, weights=distance, score=0.972, total=673.3min\n",
+      "[CV] n_neighbors=4, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=4, weights=distance, score=0.970, total=15.3min\n",
       "[CV] n_neighbors=4, weights=distance .................................\n"
      ]
     }
