--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1207,6 +1207,8 @@
       "[CV] .... n_neighbors=4, weights=distance, score=0.972, total=673.3min\n",
       "[CV] n_neighbors=4, weights=distance .................................\n",
       "[CV] ..... n_neighbors=4, weights=distance, score=0.970, total=15.3min\n",
+      "[CV] n_neighbors=4, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=4, weights=distance, score=0.971, total=15.3min\n",
       "[CV] n_neighbors=4, weights=distance .................................\n"
      ]
     }
