--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1209,7 +1209,9 @@
       "[CV] ..... n_neighbors=4, weights=distance, score=0.970, total=15.3min\n",
       "[CV] n_neighbors=4, weights=distance .................................\n",
       "[CV] ..... n_neighbors=4, weights=distance, score=0.971, total=15.3min\n",
-      "[CV] n_neighbors=4, weights=distance .................................\n"
+      "[CV] n_neighbors=4, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=4, weights=distance, score=0.972, total=16.1min\n",
+      "[CV] n_neighbors=5, weights=uniform ..................................\n"
      ]
     }
    ],
