--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1211,6 +1211,12 @@
       "[CV] ..... n_neighbors=4, weights=distance, score=0.971, total=15.3min\n",
       "[CV] n_neighbors=4, weights=distance .................................\n",
       "[CV] ..... n_neighbors=4, weights=distance, score=0.972, total=16.1min\n",
+      "[CV] n_neighbors=5, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=5, weights=uniform, score=0.970, total=15.3min\n",
+      "[CV] n_neighbors=5, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=5, weights=uniform, score=0.970, total=16.0min\n",
+      "[CV] n_neighbors=5, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=5, weights=uniform, score=0.969, total=16.3min\n",
       "[CV] n_neighbors=5, weights=uniform ..................................\n"
      ]
     }
