pushing all updated to git

--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -1217,7 +1217,15 @@
       "[CV] ...... n_neighbors=5, weights=uniform, score=0.970, total=16.0min\n",
       "[CV] n_neighbors=5, weights=uniform ..................................\n",
       "[CV] ...... n_neighbors=5, weights=uniform, score=0.969, total=16.3min\n",
-      "[CV] n_neighbors=5, weights=uniform ..................................\n"
+      "[CV] n_neighbors=5, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=5, weights=uniform, score=0.968, total=16.0min\n",
+      "[CV] n_neighbors=5, weights=uniform ..................................\n",
+      "[CV] ...... n_neighbors=5, weights=uniform, score=0.969, total=14.8min\n",
+      "[CV] n_neighbors=5, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=5, weights=distance, score=0.970, total=15.7min\n",
+      "[CV] n_neighbors=5, weights=distance .................................\n",
+      "[CV] ..... n_neighbors=5, weights=distance, score=0.971, total=15.9min\n",
+      "[CV] n_neighbors=5, weights=distance .................................\n"
      ]
     }
    ],
