Updating decision_tree.ipynb

--- a/Decision Trees/decision_tree.ipynb
+++ b/Decision Trees/decision_tree.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,10 +170,10 @@
        "</svg>\r\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x212a6ddebc8>"
+       "<graphviz.files.Source at 0x212a6dea388>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,29 +191,8 @@
     "        filled=True\n",
     "    )\n",
     "\n",
+    "render('dot', 'png', os.path.join(IMAGES_PATH, \"iris_tree.dot\"))\n",
     "Source.from_file(os.path.join(IMAGES_PATH, \"iris_tree.dot\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pydot\n",
-      "  Downloading pydot-1.4.1-py2.py3-none-any.whl (19 kB)\n",
-      "Requirement already satisfied: pyparsing>=2.1.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from pydot) (2.4.6)\n",
-      "Installing collected packages: pydot\n",
-      "Successfully installed pydot-1.4.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install pydot"
    ]
   },
   {
