--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# _Housing Price Prediction End-to-End Project_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing the common libraries and setting up the system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Check that Python 3.5 or later is installed, as well as Scikit-Learn ≥0.20.\n",
+    "- Ensure MatplotLib plots figures inline\n",
+    "- Prepare a function to save the figures"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -20,6 +43,7 @@
     "import tarfile\n",
     "import urllib\n",
     "\n",
+    "# To view figures in the notebook\n",
     "%matplotlib inline\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,9 +51,10 @@
     "mpl.rc('xtick', labelsize=12)\n",
     "mpl.rc('ytick', labelsize=12)\n",
     "\n",
+    "# Create a directory/folders to save the images and data\n",
     "project_root_dir = \".\"\n",
-    "chapter_id = \"end_to_end_project\"\n",
-    "images_path = os.path.join(project_root_dir, \"images\", chapter_id)\n",
+    "problem = \"end_to_end_project\"\n",
+    "images_path = os.path.join(project_root_dir, \"images\", problem)\n",
     "os.makedirs(images_path, exist_ok=True)\n",
     "\n",
     "def save_fig(fig_id, tight_layout=True, fig_extension=\"png\", resolution=300):\n",
@@ -39,6 +64,7 @@
     "        plt.tight_layout()\n",
     "    plt.savefig(path, format=fig_extension, dpi=resolution)\n",
     "\n",
+    "# Ignore useless warnings\n",
     "import warnings\n",
     "warnings.filterwarnings(action='ignore', message=\"^internal gelsd\")"
    ]
@@ -190,6 +216,7 @@
     "housing_path = os.path.join(\"datasets\", \"housing\")\n",
     "housing_url = download_root + \"datasets/housing/housing.tgz\"\n",
     "\n",
+    "# Fetching the data from github url\n",
     "def fetch_housing_data(housing_url=housing_url, housing_path=housing_path):\n",
     "    os.makedirs(housing_path, exist_ok=True)\n",
     "    tgz_path = os.path.join(housing_path, \"housing.tgz\")\n",
@@ -200,13 +227,12 @@
     "    \n",
     "fetch_housing_data()\n",
     "    \n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
+    "# Loading the data locally \n",
     "def load_housing_data(housing_path=housing_path):\n",
     "    csv_path = os.path.join(housing_path, \"housing.csv\")\n",
     "    return pd.read_csv(csv_path)\n",
     "\n",
+    "# Viewing top 5 rows of the data\n",
     "housing = load_housing_data()\n",
     "housing.head()"
    ]
