--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -524,6 +524,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Observations:\n",
+    "1. median_income doesn't seem to be in US dollars. Also, median_income seems to be capped at 15\n",
+    "2. housing_median_age and median_house_values also seem to be capped. We have two options to deal with such data:\n",
+    "    - collect proper labels for the capped instances\n",
+    "    - remove those districts from the training set\n",
+    "3. All the attributes have very different scales.\n",
+    "4. Many attributes' histograms are tail heavy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Creating a test set"
    ]
   },
@@ -531,16 +544,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method 1: randomly shuffling the indices and using the test ratio"
+    "To avoid __*data snooping bias*__ separate the whole data into training and test set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 1: Randomly shuffle the indices and use a test ratio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train set length:  16512\n",
+      "\n",
+      "test set length:  4128\n"
+     ]
+    }
+   ],
    "source": [
     "# to make notebook's output identical at every run\n",
     "np.random.seed(42)\n",
@@ -562,12 +592,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method 2: Using hashing to ensure consistency in selection criteria for test set"
+    "Problems with the above method:\n",
+    "1. Test set will change everytime you run the function. This can be solved by setting a random seed which will ensure same output of the function with every run.\n",
+    "2. But, everytime the dataset is updated the test set will change even after setting the random seed. Solution would be to choose an identifier and a condition to ensure the presence of the instance in the test set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Method 2: Use hashing to ensure consistency in selection criteria for test set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -590,11 +629,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>59</td>\n",
+       "      <td>-122.29</td>\n",
+       "      <td>37.82</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>2.5625</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "      <td>-122252.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>60</td>\n",
+       "      <td>-122.29</td>\n",
+       "      <td>37.83</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1121.0</td>\n",
+       "      <td>211.0</td>\n",
+       "      <td>554.0</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>3.3929</td>\n",
+       "      <td>75700.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "      <td>-122252.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>61</td>\n",
+       "      <td>-122.29</td>\n",
+       "      <td>37.82</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>6.1183</td>\n",
+       "      <td>75000.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "      <td>-122252.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>62</td>\n",
+       "      <td>-122.29</td>\n",
+       "      <td>37.81</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>377.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>0.9011</td>\n",
+       "      <td>86100.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "      <td>-122252.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>67</td>\n",
+       "      <td>-122.29</td>\n",
+       "      <td>37.80</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1027.0</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>492.0</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>2.6094</td>\n",
+       "      <td>81300.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "      <td>-122252.20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index  longitude  latitude  housing_median_age  total_rooms  \\\n",
+       "59     59    -122.29     37.82                 2.0        158.0   \n",
+       "60     60    -122.29     37.83                52.0       1121.0   \n",
+       "61     61    -122.29     37.82                49.0        135.0   \n",
+       "62     62    -122.29     37.81                50.0        760.0   \n",
+       "67     67    -122.29     37.80                52.0       1027.0   \n",
+       "\n",
+       "    total_bedrooms  population  households  median_income  median_house_value  \\\n",
+       "59            43.0        94.0        57.0         2.5625             60000.0   \n",
+       "60           211.0       554.0       187.0         3.3929             75700.0   \n",
+       "61            29.0        86.0        23.0         6.1183             75000.0   \n",
+       "62           190.0       377.0       122.0         0.9011             86100.0   \n",
+       "67           244.0       492.0       147.0         2.6094             81300.0   \n",
+       "\n",
+       "   ocean_proximity         id  \n",
+       "59        NEAR BAY -122252.18  \n",
+       "60        NEAR BAY -122252.17  \n",
+       "61        NEAR BAY -122252.18  \n",
+       "62        NEAR BAY -122252.19  \n",
+       "67        NEAR BAY -122252.20  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## using a different column for id - here longitude and latitude\n",
     "housing_with_id[\"id\"] = housing[\"longitude\"] * 1000 + housing[\"latitude\"]\n",
@@ -606,21 +788,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method 3: train_test_split method from sklearn"
+    "### Method 3: SKLEARN train_test_split method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20046</th>\n",
+       "      <td>-119.01</td>\n",
+       "      <td>36.06</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1505.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1392.0</td>\n",
+       "      <td>359.0</td>\n",
+       "      <td>1.6812</td>\n",
+       "      <td>47700.0</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3024</th>\n",
+       "      <td>-119.46</td>\n",
+       "      <td>35.14</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2943.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1565.0</td>\n",
+       "      <td>584.0</td>\n",
+       "      <td>2.5313</td>\n",
+       "      <td>45800.0</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15663</th>\n",
+       "      <td>-122.44</td>\n",
+       "      <td>37.80</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>3830.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1310.0</td>\n",
+       "      <td>963.0</td>\n",
+       "      <td>3.4801</td>\n",
+       "      <td>500001.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20484</th>\n",
+       "      <td>-118.72</td>\n",
+       "      <td>34.28</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>3051.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1705.0</td>\n",
+       "      <td>495.0</td>\n",
+       "      <td>5.7376</td>\n",
+       "      <td>218600.0</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>36.62</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2351.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>3.7250</td>\n",
+       "      <td>278000.0</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "20046    -119.01     36.06                25.0       1505.0             NaN   \n",
+       "3024     -119.46     35.14                30.0       2943.0             NaN   \n",
+       "15663    -122.44     37.80                52.0       3830.0             NaN   \n",
+       "20484    -118.72     34.28                17.0       3051.0             NaN   \n",
+       "9814     -121.93     36.62                34.0       2351.0             NaN   \n",
+       "\n",
+       "       population  households  median_income  median_house_value  \\\n",
+       "20046      1392.0       359.0         1.6812             47700.0   \n",
+       "3024       1565.0       584.0         2.5313             45800.0   \n",
+       "15663      1310.0       963.0         3.4801            500001.0   \n",
+       "20484      1705.0       495.0         5.7376            218600.0   \n",
+       "9814       1063.0       428.0         3.7250            278000.0   \n",
+       "\n",
+       "      ocean_proximity  \n",
+       "20046          INLAND  \n",
+       "3024           INLAND  \n",
+       "15663        NEAR BAY  \n",
+       "20484       <1H OCEAN  \n",
+       "9814       NEAR OCEAN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "# Set the random seed using random_state to ensure consistent selection of test set\n",
     "train_set, test_set = train_test_split(housing, test_size=0.2, random_state=42)\n",
     "test_set.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random sampling is fine if the dataset is large (especially relative to number of attributes). But, if not, there is a significant risk of sampling bias. Therefore, we have to use stratified s"
    ]
   },
   {
