--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4416,11 +4416,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5, error_score=nan,\n",
+       "                   estimator=RandomForestRegressor(bootstrap=True,\n",
+       "                                                   ccp_alpha=0.0,\n",
+       "                                                   criterion='mse',\n",
+       "                                                   max_depth=None,\n",
+       "                                                   max_features='auto',\n",
+       "                                                   max_leaf_nodes=None,\n",
+       "                                                   max_samples=None,\n",
+       "                                                   min_impurity_decrease=0.0,\n",
+       "                                                   min_impurity_split=None,\n",
+       "                                                   min_samples_leaf=1,\n",
+       "                                                   min_samples_split=2,\n",
+       "                                                   min_weight_fraction_leaf=0.0,\n",
+       "                                                   n_estimators=100,\n",
+       "                                                   n_jobs=None, oob_score=Fals...\n",
+       "                   iid='deprecated', n_iter=50, n_jobs=None,\n",
+       "                   param_distributions={'max_features': <scipy.stats._distn_infrastructure.rv_frozen object at 0x0000027046082988>,\n",
+       "                                        'n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x0000027046082FC8>},\n",
+       "                   pre_dispatch='2*n_jobs', random_state=42, refit=True,\n",
+       "                   return_train_score=False, scoring='neg_mean_squared_error',\n",
+       "                   verbose=0)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from scipy.stats import randint\n",
@@ -4438,11 +4469,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_features': 7, 'n_estimators': 180} :  49150.70756927707\n",
+      "{'max_features': 5, 'n_estimators': 15} :  51389.889203389284\n",
+      "{'max_features': 3, 'n_estimators': 72} :  50796.155224308866\n",
+      "{'max_features': 5, 'n_estimators': 21} :  50835.13360315349\n",
+      "{'max_features': 7, 'n_estimators': 122} :  49280.9449827171\n",
+      "{'max_features': 3, 'n_estimators': 75} :  50774.90662363929\n",
+      "{'max_features': 3, 'n_estimators': 88} :  50682.78888164288\n",
+      "{'max_features': 5, 'n_estimators': 100} :  49608.99608105296\n",
+      "{'max_features': 3, 'n_estimators': 150} :  50473.61930350219\n",
+      "{'max_features': 5, 'n_estimators': 2} :  64429.84143294435\n",
+      "{'max_features': 4, 'n_estimators': 158} :  49644.09131212658\n",
+      "{'max_features': 6, 'n_estimators': 130} :  49330.86513175718\n",
+      "{'max_features': 4, 'n_estimators': 21} :  50938.80089203971\n",
+      "{'max_features': 1, 'n_estimators': 58} :  54834.97830655488\n",
+      "{'max_features': 6, 'n_estimators': 89} :  49409.32838866186\n",
+      "{'max_features': 1, 'n_estimators': 59} :  54840.601578948765\n",
+      "{'max_features': 7, 'n_estimators': 170} :  49185.687493257356\n",
+      "{'max_features': 4, 'n_estimators': 188} :  49663.158846840895\n",
+      "{'max_features': 7, 'n_estimators': 190} :  49110.33124624122\n",
+      "{'max_features': 6, 'n_estimators': 175} :  49284.09080838508\n",
+      "{'max_features': 6, 'n_estimators': 51} :  49705.98443788969\n",
+      "{'max_features': 4, 'n_estimators': 55} :  49827.15645941104\n",
+      "{'max_features': 4, 'n_estimators': 64} :  49828.725269053604\n",
+      "{'max_features': 1, 'n_estimators': 131} :  54473.86215645767\n",
+      "{'max_features': 5, 'n_estimators': 51} :  50039.05248633363\n",
+      "{'max_features': 7, 'n_estimators': 21} :  50459.4456269365\n",
+      "{'max_features': 1, 'n_estimators': 167} :  54408.54407138164\n",
+      "{'max_features': 2, 'n_estimators': 132} :  52008.36821461517\n",
+      "{'max_features': 1, 'n_estimators': 60} :  54825.99686371663\n",
+      "{'max_features': 6, 'n_estimators': 9} :  52275.13870554323\n",
+      "{'max_features': 2, 'n_estimators': 53} :  52330.88815630993\n",
+      "{'max_features': 2, 'n_estimators': 84} :  52070.98863188737\n",
+      "{'max_features': 4, 'n_estimators': 111} :  49621.97718882391\n",
+      "{'max_features': 4, 'n_estimators': 199} :  49688.55026280232\n",
+      "{'max_features': 4, 'n_estimators': 8} :  53756.85740783069\n",
+      "{'max_features': 7, 'n_estimators': 35} :  49915.944381362875\n",
+      "{'max_features': 6, 'n_estimators': 81} :  49422.538330320196\n",
+      "{'max_features': 4, 'n_estimators': 50} :  49888.69599493461\n",
+      "{'max_features': 4, 'n_estimators': 2} :  66368.93106787658\n",
+      "{'max_features': 6, 'n_estimators': 134} :  49315.45057735634\n",
+      "{'max_features': 6, 'n_estimators': 106} :  49364.997144134984\n",
+      "{'max_features': 4, 'n_estimators': 54} :  49805.459322531744\n",
+      "{'max_features': 5, 'n_estimators': 191} :  49352.564044158964\n",
+      "{'max_features': 2, 'n_estimators': 44} :  52709.239924775626\n",
+      "{'max_features': 2, 'n_estimators': 190} :  51887.28478558083\n",
+      "{'max_features': 4, 'n_estimators': 14} :  51888.08809177534\n",
+      "{'max_features': 7, 'n_estimators': 48} :  49684.95001665469\n",
+      "{'max_features': 7, 'n_estimators': 190} :  49110.33124624122\n",
+      "{'max_features': 5, 'n_estimators': 82} :  49710.79449858496\n",
+      "{'max_features': 7, 'n_estimators': 53} :  49634.09475661125\n"
+     ]
+    }
+   ],
    "source": [
     "cvres = rnd_search.cv_results_\n",
     "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
@@ -4451,11 +4539,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.33442355e-02, 6.29090705e-02, 4.11437985e-02, 1.46726854e-02,\n",
+       "       1.41064835e-02, 1.48742809e-02, 1.42575993e-02, 3.66158981e-01,\n",
+       "       5.64191792e-02, 1.08792957e-01, 5.33510773e-02, 1.03114883e-02,\n",
+       "       1.64780994e-01, 6.02803867e-05, 1.96041560e-03, 2.85647464e-03])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_importances = grid_search.best_estimator_.feature_importances_\n",
     "feature_importances"
@@ -4463,11 +4565,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.36615898061813423, 'median_income'),\n",
+       " (0.16478099356159054, 'INLAND'),\n",
+       " (0.10879295677551575, 'pop_per_hhold'),\n",
+       " (0.07334423551601243, 'longitude'),\n",
+       " (0.06290907048262032, 'latitude'),\n",
+       " (0.056419179181954014, 'rooms_per_hhold'),\n",
+       " (0.053351077347675815, 'bedrooms_per_room'),\n",
+       " (0.04114379847872964, 'housing_median_age'),\n",
+       " (0.014874280890402769, 'population'),\n",
+       " (0.014672685420543239, 'total_rooms'),\n",
+       " (0.014257599323407808, 'households'),\n",
+       " (0.014106483453584104, 'total_bedrooms'),\n",
+       " (0.010311488326303788, '<1H OCEAN'),\n",
+       " (0.0028564746373201584, 'NEAR OCEAN'),\n",
+       " (0.0019604155994780706, 'NEAR BAY'),\n",
+       " (6.0280386727366e-05, 'ISLAND')]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "extra_attribs = [\"rooms_per_hhold\", \"pop_per_hhold\", \"bedrooms_per_room\"]\n",
     "#cat_encoder = cat_pipeline.named_steps[\"cat_encoder\"] # old solution\n",
@@ -4479,11 +4607,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47730.22690385927"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "final_model = grid_search.best_estimator_\n",
     "\n",
@@ -4500,11 +4639,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([45685.10470776, 49691.25001878])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from scipy import stats\n",
     "\n",
@@ -4517,11 +4667,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45685.10470776, 49691.25001877858)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We could compute the interval manually like this:\n",
     "m = len(squared_errors)\n",
@@ -4533,11 +4694,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45685.717918136455, 49690.68623889413)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Alternatively, we could use a z-scores rather than t-scores:\n",
     "zscore = stats.norm.ppf((1 + confidence) / 2)\n",
@@ -4558,7 +4730,72 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
+      "[CV] C=10.0, kernel=linear ...........................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ............................ C=10.0, kernel=linear, total=   7.6s\n",
+      "[CV] C=10.0, kernel=linear ...........................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    7.5s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ............................ C=10.0, kernel=linear, total=   8.4s\n",
+      "[CV] C=10.0, kernel=linear ...........................................\n",
+      "[CV] ............................ C=10.0, kernel=linear, total=   9.4s\n",
+      "[CV] C=10.0, kernel=linear ...........................................\n",
+      "[CV] ............................ C=10.0, kernel=linear, total=   8.0s\n",
+      "[CV] C=10.0, kernel=linear ...........................................\n",
+      "[CV] ............................ C=10.0, kernel=linear, total=   7.5s\n",
+      "[CV] C=30.0, kernel=linear ...........................................\n",
+      "[CV] ............................ C=30.0, kernel=linear, total=   7.0s\n",
+      "[CV] C=30.0, kernel=linear ...........................................\n",
+      "[CV] ............................ C=30.0, kernel=linear, total=   7.3s\n",
+      "[CV] C=30.0, kernel=linear ...........................................\n",
+      "[CV] ............................ C=30.0, kernel=linear, total=   7.2s\n",
+      "[CV] C=30.0, kernel=linear ...........................................\n",
+      "[CV] ............................ C=30.0, kernel=linear, total=   7.5s\n",
+      "[CV] C=30.0, kernel=linear ...........................................\n",
+      "[CV] ............................ C=30.0, kernel=linear, total=   7.5s\n",
+      "[CV] C=100.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=100.0, kernel=linear, total=   8.8s\n",
+      "[CV] C=100.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=100.0, kernel=linear, total=   7.7s\n",
+      "[CV] C=100.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=100.0, kernel=linear, total=   7.3s\n",
+      "[CV] C=100.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=100.0, kernel=linear, total=   7.3s\n",
+      "[CV] C=100.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=100.0, kernel=linear, total=   7.2s\n",
+      "[CV] C=300.0, kernel=linear ..........................................\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
