--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4792,7 +4792,39 @@
       "[CV] ........................... C=100.0, kernel=linear, total=   7.3s\n",
       "[CV] C=100.0, kernel=linear ..........................................\n",
       "[CV] ........................... C=100.0, kernel=linear, total=   7.2s\n",
-      "[CV] C=300.0, kernel=linear ..........................................\n"
+      "[CV] C=300.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=300.0, kernel=linear, total=   7.2s\n",
+      "[CV] C=300.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=300.0, kernel=linear, total=   7.1s\n",
+      "[CV] C=300.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=300.0, kernel=linear, total=   7.9s\n",
+      "[CV] C=300.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=300.0, kernel=linear, total=   7.7s\n",
+      "[CV] C=300.0, kernel=linear ..........................................\n",
+      "[CV] ........................... C=300.0, kernel=linear, total=   6.8s\n",
+      "[CV] C=1000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=1000.0, kernel=linear, total=   6.3s\n",
+      "[CV] C=1000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=1000.0, kernel=linear, total=   6.5s\n",
+      "[CV] C=1000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=1000.0, kernel=linear, total=   6.2s\n",
+      "[CV] C=1000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=1000.0, kernel=linear, total=   6.7s\n",
+      "[CV] C=1000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=1000.0, kernel=linear, total=   6.3s\n",
+      "[CV] C=3000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=3000.0, kernel=linear, total=   6.7s\n",
+      "[CV] C=3000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=3000.0, kernel=linear, total=   6.9s\n",
+      "[CV] C=3000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=3000.0, kernel=linear, total=   7.0s\n",
+      "[CV] C=3000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=3000.0, kernel=linear, total=   7.1s\n",
+      "[CV] C=3000.0, kernel=linear .........................................\n",
+      "[CV] .......................... C=3000.0, kernel=linear, total=   7.0s\n",
+      "[CV] C=10000.0, kernel=linear ........................................\n",
+      "[CV] ......................... C=10000.0, kernel=linear, total=   9.6s\n",
+      "[CV] C=10000.0, kernel=linear ........................................\n"
      ]
     }
    ],
