--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4726,7 +4726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "scrolled": false
    },
@@ -5294,6 +5294,29 @@
      "text": [
       "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed: 49.9min finished\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score=nan,\n",
+       "             estimator=SVR(C=1.0, cache_size=200, coef0=0.0, degree=3,\n",
+       "                           epsilon=0.1, gamma='scale', kernel='rbf',\n",
+       "                           max_iter=-1, shrinking=True, tol=0.001,\n",
+       "                           verbose=False),\n",
+       "             iid='deprecated', n_jobs=None,\n",
+       "             param_grid=[{'C': [10.0, 30.0, 100.0, 300.0, 1000.0, 3000.0,\n",
+       "                                10000.0, 30000.0],\n",
+       "                          'kernel': ['linear']},\n",
+       "                         {'C': [1.0, 3.0, 10.0, 30.0, 100.0, 300.0, 1000.0],\n",
+       "                          'gamma': [0.01, 0.03, 0.1, 0.3, 1.0, 3.0],\n",
+       "                          'kernel': ['rbf']}],\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='neg_mean_squared_error', verbose=2)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -5312,11 +5335,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 30000.0, 'kernel': 'linear'} :  70363.84006944533\n"
+     ]
+    }
+   ],
    "source": [
     "print(grid_search.best_params_, \": \", np.sqrt(-(grid_search.best_score_)))"
    ]
@@ -5327,7 +5358,96 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=   9.5s\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    9.4s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=   7.4s\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n",
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=   8.1s\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n",
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=   7.7s\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n",
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=   8.4s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  23.9s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  25.3s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  17.8s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  17.2s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  18.7s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  14.2s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  12.1s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  10.3s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  10.3s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  10.4s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   5.9s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   6.2s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   6.2s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   6.3s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   6.2s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  11.1s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  11.3s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  11.1s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  11.1s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  11.1s\n",
+      "[CV] C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf ...\n",
+      "[CV]  C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf, total=  24.7s\n",
+      "[CV] C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf ...\n",
+      "[CV]  C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf, total=  21.8s\n",
+      "[CV] C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf ...\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import expon, reciprocal\n",
     "\n",
