Update Count consecutive chars_nums in a list.ipynb

--- a/Practice Coding/Count consecutive chars_nums in a list.ipynb
+++ b/Practice Coding/Count consecutive chars_nums in a list.ipynb
@@ -25,17 +25,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First number is the char in the input and second is the number of times is appears consecutively. \n",
+      "\n",
+      "[1, 3, 3, 1, 5, 2, 3, 3, 2, 1, 5, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "d = pd.Series(input_list)\n",
     "output_list = []\n",
     "for x, y in d.groupby([d.ne(d.shift()).cumsum(), d]):\n",
     "    output_list = output_list + [x[1]]\n",
     "    output_list = output_list + [y.shape[0]]\n",
-    "print(\"First number is the char in the input and second is the number if\", \"\\n\", output_list)"
+    "print(\"First number is the char in the input and second is the number of times is appears consecutively.\", \"\\n\")\n",
+    "print(output_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
